XtConnect - Use QDateTime consistently as UTC

Modify SQL to use ISO date string to specify that the time is UTC.

REVIEW: 110846
BUG: 320790